# redownload

./: .gitignore  Makefile  pyproject.toml  setup.cfg
.github/workflows/: build_cli.yml  code_analysis_pull.yml  code_analysis_push.yml  mirrors.yml  tests.yml
build_system/: update_version.py
docs/: README.md  development.md  usage.md
src/: redownload_cli.py  redownload_gui.py
src/redownload/: __init__.py  config.py  downloads.py  exceptions.py  version.py  web_parsing.py
tests/unit/: test_downloads.py  test_web_parsing.py
